# mysql-student-room-analysis

./: .gitignore  README.md  main.py  pyproject.toml
data/: rooms.json  students.json
reports/: 00_summary_report.txt  01_rooms_and_student_count.txt  02_top_rooms_by_average_age.txt  03_top_rooms_by_age_difference.txt  04_rooms_with_mixed_sex.txt  05_optimization_recommendations.txt
src/: __init__.py
src/application/: __init__.py  student_room_analyzer.py
src/config/: __init__.py  config.py
src/data/: __init__.py  data_loader.py  enums.py  models.py
src/data/enums/: __init__.py  enums.py
src/data/loaders/: __init__.py  data_loader.py
src/data/models/: __init__.py  models.py
src/services/: __init__.py  database_manager.py  query_service.py  report_generator.py  repository.py
src/services/connections/: __init__.py  database_connection.py  mysql_connection.py
src/services/database/: __init__.py  database_manager.py
src/services/protocols/: __init__.py  query_service_protocol.py  report_generator_protocol.py  room_repository_protocol.py  student_repository_protocol.py
src/services/queries/: __init__.py  student_room_query_service.py
src/services/reports/: __init__.py  console_report_generator.py
src/services/repositories/: __init__.py  mysql_room_repository.py  mysql_student_repository.py
src/utils/: __init__.py  optimization_advisor.py  preview_database.py
src/utils/optimization/: __init__.py  optimization_advisor.py
src/utils/preview/: __init__.py
tests/: __init__.py  test_setup.py
