[project]
name = "student-room-analysis"
version = "1.0.0"
description = "A comprehensive Python application for analyzing student room data using MySQL, following SOLID principles"
authors = [
    {name = "Student Room Analysis Team"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mysql-connector-python>=9.4.0",
    "tabulate>=0.9.0",
]
